# Python.PubSub.Scanner

./: .gitignore  Makefile  README.md  TODO.md  devtools_config.example.yaml  event_flow_config.example.yaml  pyproject.toml
docs/: ANOMALY_DETECTION.md  CUSTOM_GENERATORS.md
examples/: detect_anomalies.py
src/python_pubsub_scanner/: __init__.py  analyze_event_flow.py  anomaly_detector.py  cli.py  config_helper.py  generate_hierarchical_tree.py  scanner.py
src/python_pubsub_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_pubsub_scanner/graph_generators/: __init__.py  base.py  complete.py  full_tree.py
tests/: test_anomaly_detector.py  test_config_helper.py  test_graph_generators.py  test_scanner_payload.py
