[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_pubsub_scanner"
version = "0.1.0"
description = "Autonomous scanner for event-driven architectures - scans codebase and pushes event flow graphs to API"
readme = "README.md"
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "setuptools>=65.0",
    "wheel",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "black>=23.0",
    "graphviz>=0.20"
]

[project.scripts]
pubsub-scanner = "python_pubsub_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/venantvr-trading/Python.PubSub.Scanner"
Documentation = "https://github.com/venantvr-trading/Python.PubSub.Scanner/wiki"
Repository = "https://github.com/venantvr-trading/Python.PubSub.Scanner"
Issues = "https://github.com/venantvr-trading/Python.PubSub.Scanner/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_pubsub_scanner*"]
exclude = []
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ['py310']
